# ticketresolve

./: .gitignore  README.md  gameplan.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/ingest/: config.py  embeddings.py  ingest_text.py  query_text.py  s3vectors_client.py
backend/resolver/: __init__.py  agent.py  run_resolve.py  templates.py  test_full.py  test_simple.py  tools.py
backend/tests/: __init__.py  test_placeholder.py
guides/: 1_permissions.md  2_vectors_ingest.md  architecture.md
terraform/: README.md
terraform/1_permissions/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/2_vectors_ingest/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
