[project]
name = "ticketresolve-backend"
version = "0.1.0"
description = "TicketResolve backend: API, resolver agent, ingest"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
per-file-ignores = { "tests/*" = ["S101"] }  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
