[project]
name = "ticketresolve-backend"
version = "0.1.0"
description = "TicketResolve backend: API, resolver agent, ingest"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0",  # S3 Vectors client added in 1.40.0
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
